[package]
name = "agent-config-framework"
version = "0.1.0"
edition = "2021"
description = "Agent Configuration Framework for BitNet Docker Swarm Intelligence"
authors = ["BitNet-Rust Team"]
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime and HTTP client
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for session IDs
uuid = { version = "1.0", features = ["v4"] }

# Regular expressions for content parsing
regex = "1.0"

# File system operations and path handling
walkdir = "2.0"

# Template engine for agent config generation
handlebars = "4.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# CLI interface
clap = { version = "4.0", features = ["derive"] }

# Configuration management
config = "0.13"

# Docker API client (optional, for direct Docker integration)
bollard = { version = "0.14", optional = true }

[dev-dependencies]
tempfile = "3.0"
assert_fs = "1.0"

[features]
default = ["docker-integration"]
docker-integration = ["bollard"]

[[bin]]
name = "agent-config-cli"
path = "src/cli/main.rs"

[lib]
name = "agent_config_framework"
path = "src/lib.rs"